[gd_scene load_steps=4 format=3 uid="uid://c7wckob7pe8c8"]

[ext_resource type="Script" path="res://scenes/player/camera_rig.gd" id="1_ooib6"]
[ext_resource type="Shader" path="res://assets/models/Player/shaders/forground_shader.gdshader" id="2_ucnsm"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_latun"]
shader = ExtResource("2_ucnsm")
shader_parameter/MULTIPLIER = 0.7
shader_parameter/SCALE = 1.0
shader_parameter/SOFTNESS = 0.45
shader_parameter/BASE_OPACITY = 1.0

[node name="camera_rig" type="Node3D"]
script = ExtResource("1_ooib6")

[node name="base_camera" type="Camera3D" parent="."]
cull_mask = 1047552

[node name="background_viewport_container" type="SubViewportContainer" parent="base_camera"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="background_viweport" type="SubViewport" parent="base_camera/background_viewport_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="background_camera" type="Camera3D" parent="base_camera/background_viewport_container/background_viweport"]
cull_mask = 1047553

[node name="forground_viewport_container" type="SubViewportContainer" parent="base_camera"]
material = SubResource("ShaderMaterial_latun")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="forground_viweport" type="SubViewport" parent="base_camera/forground_viewport_container"]
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 4

[node name="forground_camera" type="Camera3D" parent="base_camera/forground_viewport_container/forground_viweport"]
cull_mask = 1047554
